# tinyusb-bug-repro

./: README.md  payload.py
ch32v307/: .gitignore  Makefile  project.mk
ch32v307/src/: ch32v30x_it.c  debug.c  tusb_app.c
common-inc/: tusb_app.h  tusb_config.h
common-src/: dfu.c  main.c  usb_descriptors.c
rp2040/: CMakeLists.txt
rp2040/inc/: critical.h
rp2040/src/: debug.c  hardfault.c  tusb_app.c
